# sn_client

./: Cargo.toml
.github/workflows/: master.yml
safe_app/: CHANGELOG.md  Cargo.toml
safe_app/src/: test_utils.rs
safe_app/src/ffi/errors/: mod.rs
safe_app/src/tests/: append_only_data.rs  coins.rs  mod.rs  money.rs  sequence.rs
safe_app_jni/: Cargo.toml
safe_authenticator/: CHANGELOG.md  Cargo.toml
safe_authenticator/src/: app_auth.rs  client.rs  config.rs  test_utils.rs
safe_authenticator/src/ffi/errors/: mod.rs
safe_authenticator/src/tests/: mod.rs  revocation.rs  serialisation.rs
safe_authenticator_ffi/: Cargo.toml
safe_authenticator_ffi/src/ffi/: apps.rs  mod.rs
safe_authenticator_ffi/src/tests/: mod.rs
safe_authenticator_jni/: Cargo.toml
safe_core/: CHANGELOG.md  Cargo.toml
safe_core/src/: connection_manager.rs
safe_core/src/client/: core_client.rs  mod.rs
safe_core/src/client/mock/: account.rs  connection_manager.rs  mod.rs  tests.rs  vault.rs
safe_core/src/client/mock/vault/: client.rs  idata.rs  login_packet.rs  mdata.rs  mod.rs
safe_core/src/connection_manager/: connection_group.rs
safe_core/src/ffi/ipc/: req.rs
safe_core/src/utils/test_utils/: mod.rs
src/: connection_manager.rs  crypto.rs
src/client/: blob_apis.rs  blob_storage.rs  map_apis.rs  mod.rs  sequence_apis.rs
src/client/transfer_actor/: balance_management.rs  mod.rs  simulated_payouts.rs
src/connection_manager/: connection_group.rs
src/connections/: messaging.rs
src/utils/: mod.rs
src/utils/test_utils/: mod.rs
tests/: Cargo.toml
