[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Safe Network Client"
documentation = "https://docs.rs/sn_client"
edition = "2018"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_client"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_client"
version = "0.46.12"
keywords = [ "Safe", "Network", "SafeNetwork" ]

[package.metadata.docs.rs]
features = [ "simulated-payouts" ]

[dependencies]
anyhow = "1.0.36"
async-trait = "~0.1.41"
bincode = "1.2.1"
crdts = "~4.3.0"
dirs-next = "1.0.1"
futures = "~0.3.5"
futures-util = "~0.3.4"
log = "~0.4.8"
qp2p = "~0.9.18"
rand = "~0.7.3"
regex = "1.3.1"
rmp-serde = "~0.15.1"
self_encryption = "~0.19.4"
serde_json = "1.0.53"
# sn_transfers = "~0.3.0"
sn_transfers = { git = "https://github.com/oetyng/sn_transfers", branch = "remove-msgenvelope" }
# sn_transfers = { path = "../sn_transfers" }
# sn_messaging = "3.0.0"
sn_messaging = { git = "https://github.com/oetyng/sn_messaging", branch = "all-acc-in-routing" }
# sn_messaging = { path = "../sn_messaging" }
# sn_data_types = "~0.14.3"
sn_data_types = { git = "https://github.com/oetyng/sn_data_types", branch = "remove-msgenvelope" }
# sn_data_types = { path = "../sn_data_types" }
thiserror = "1.0.23"
threshold_crypto = "0.4.0"
tiny-keccak = "1.5.0"
url = "2.1.0"
xor_name = "1.1.10"

  [dependencies.bytes]
  version = "1.0.1"
  features = [ "serde" ]

  [dependencies.chrono]
  version = "~0.4.0"
  features = [ "serde" ]

  [dependencies.miscreant]
  version = "~0.4.2"
  features = [ "soft-aes" ]

  [dependencies.serde]
  version = "1.0.111"
  features = [ "derive", "rc" ]

  [dependencies.tokio]
  version = "~0.2.21"
  features = [ "rt-core", "rt-threaded", "blocking", "stream", "rt-util" ]

[dev-dependencies]
serde_json = "1.0.9"
tracing-subscriber = "~0.2.15"

[features]
default = [ "simulated-payouts" ]
simulated-payouts = [
  "sn_data_types/simulated-payouts",
  "sn_transfers/simulated-payouts",
  "sn_messaging/simulated-payouts"
]
